[gd_scene load_steps=4 format=3 uid="uid://bhskf8yrulqtj"]

[ext_resource type="Script" uid="uid://d1mdyvr7majfe" path="res://src/ui_parts/import_warning_menu.gd" id="1_1rv5w"]
[ext_resource type="PackedScene" uid="uid://xh26qa68xed4" path="res://src/ui_widgets/preview_rect.tscn" id="2_j1v8v"]
[ext_resource type="FontFile" uid="uid://depydd16jq777" path="res://assets/fonts/FontMono.ttf" id="4_rpfrk"]

[node name="ImportWarningPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -111.0
offset_right = 206.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
script = ExtResource("1_1rv5w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="TextureContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TexturePreview" parent="VBoxContainer/TextureContainer" instance=ExtResource("2_j1v8v")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TextureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TextureContainer/MarginContainer"]
layout_mode = 2

[node name="WarningsLabel" type="RichTextLabel" parent="VBoxContainer/TextureContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("4_rpfrk")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
mouse_default_cursor_shape = 2

[node name="OKButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
mouse_default_cursor_shape = 2
